crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests_template_children__nested_patterned_template_child_vapor_output.snap
---
source: crates/vize_atelier_vapor/src/tests_template_children.rs
expression: vapor_output(NESTED)
---
errors=[]
templates=["<li>X</li>", "<li>Inner fallback</li>", "<p>Outer fallback</p>", "<div><footer>tail</footer></div>"]
code=
import { child as _child, setClass as _setClass, setInsertionState as _setInsertionState, renderEffect as _renderEffect, createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<li>X</li>")
const t1 = _template("<li>Inner fallback</li>")
const t2 = _template("<p>Outer fallback</p>", true)
const t3 = _template("<div><footer>tail</footer></div>", true)

export function render(_ctx) {
  const n1 = t3()
  const n0 = _child(n1)
  _setInsertionState(n1, null, 0)
  const n2 = _createIf(() => ((_ctx.outer) === ('open')), () => {
    _setInsertionState(n1, null, 0)
    const n4 = _createIf(() => ((_ctx.inner) === ('x')), () => {
      const n6 = t0()
      return n6
    }, () => {
      const n8 = t1()
      return n8
    })
    return n4
  }, () => {
    const n10 = t2()
    return n10
  })
  _renderEffect(() => _setClass(n0, _ctx.cls))
  return n1
}
