crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests_template_children__nested_text_run_inside_patterned_template_vapor_output.snap
---
source: crates/vize_atelier_vapor/src/tests_template_children.rs
expression: vapor_output(TEXT_RUN)
---
errors=[]
templates=["<li>Ready</li>", "<div>Before   after<footer>Tail</footer></div>"]
code=
import { child as _child, next as _next, txt as _txt, toDisplayString as _toDisplayString, setText as _setText, setClass as _setClass, setInsertionState as _setInsertionState, renderEffect as _renderEffect, createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<li>Ready</li>", true)
const t1 = _template("<div>Before   after<footer>Tail</footer></div>", true)

export function render(_ctx) {
  const n1 = t1()
  const n0 = _next(_child(n1), 1)
  const n2 = _child(n1)
  const x1 = _txt(n1)
  _setInsertionState(n1, n2, 0)
  const n3 = _createIf(() => ((_ctx.status) === ('ready')), () => {
    const n5 = t0()
    return n5
  })
  _renderEffect(() => {
    _setText(x1, "Before " + _toDisplayString(_ctx.label) + " after")
    _setClass(n0, _ctx.cls)
  })
  return n1
}
